crates/lingui_macro/tests/snapshots/jsx__elements_inside_expression_container.snap
---
source: crates/lingui_macro/tests/jsx.rs
---
import { Trans } from "@lingui/react/macro";
<Trans>{<span>Component inside expression container</span>}</Trans>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "1cZQQW",
    components: {
        0: <span/>
    },
    message: "<0>Component inside expression container</0>"
}}/>;
