crates/lingui_macro/tests/snapshots/jsx__elements_without_children.snap
---
source: crates/lingui_macro/tests/jsx.rs
---
import { Trans } from "@lingui/react/macro";
<Trans>{<br />}</Trans>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "SCJtqt",
    components: {
        0: <br/>
    },
    message: "<0/>"
}}/>;
