crates/lingui_macro/tests/snapshots/jsx__html_attributes_are_handled.snap
---
source: crates/lingui_macro/tests/jsx.rs
---
import { Trans } from "@lingui/react/macro";
<Trans>
  <Text>This should work &nbsp;</Text>
</Trans>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "K_1Xpr",
    components: {
        0: <Text/>
    },
    message: "<0>This should work  </0>"
}}/>;
