crates/lingui_macro/tests/snapshots/jsx__ignore_jsx_empty_expression.snap
---
source: crates/lingui_macro/tests/jsx.rs
---
import { Trans } from "@lingui/react/macro";
<Trans>Hello {/* and I cannot stress this enough */} World</Trans>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "i0M2R8",
    message: "Hello  World"
}}/>;
