crates/lingui_macro/tests/snapshots/jsx__jsx_comments_should_not_affect_expression_index.snap
---
source: crates/lingui_macro/tests/jsx.rs
---
import { Trans } from '@lingui/react/macro';
// Without comment - expression gets index 0
<Trans>
  Click here
  <Link>
    {getText()}
  </Link>
</Trans>;
// With comment before expression - expression should STILL get index 0
<Trans>
  Click here
  <Link>
    {/* @ts-expect-error */}
    {getText()}
  </Link>
</Trans>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
// Without comment - expression gets index 0
<Trans_ {.../*i18n*/ {
    id: "HW7Brx",
    values: {
        0: getText()
    },
    components: {
        0: <Link/>
    },
    message: "Click here<0>{0}</0>"
}}/>;
// With comment before expression - expression should STILL get index 0
<Trans_ {.../*i18n*/ {
    id: "HW7Brx",
    values: {
        0: getText()
    },
    components: {
        0: <Link/>
    },
    message: "Click here<0>{0}</0>"
}}/>;
