crates/lingui_macro/tests/snapshots/jsx__jsx_explicit_labels.snap
---
source: crates/lingui_macro/tests/jsx.rs
---
import { Trans } from "@lingui/react/macro";

<Trans>Refresh {{foo}} inbox</Trans>;
<Trans>Refresh {{foo: foo.bar}} inbox</Trans>;
<Trans>Refresh {{foo: expr()}} inbox</Trans>;
<Trans>Refresh {{foo: bar, baz: qux}} inbox</Trans>;
<Trans>Refresh {{}} inbox</Trans>;
<Trans>Refresh {{...spread}} inbox</Trans>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "rtxU8c",
    values: {
        foo: foo
    },
    message: "Refresh {foo} inbox"
}}/>;
<Trans_ {.../*i18n*/ {
    id: "rtxU8c",
    values: {
        foo: foo.bar
    },
    message: "Refresh {foo} inbox"
}}/>;
<Trans_ {.../*i18n*/ {
    id: "rtxU8c",
    values: {
        foo: expr()
    },
    message: "Refresh {foo} inbox"
}}/>;
<Trans_ {.../*i18n*/ {
    id: "rtxU8c",
    values: {
        foo: bar
    },
    message: "Refresh {foo} inbox"
}}/>;
<Trans_ {.../*i18n*/ {
    id: "AmeQ8b",
    values: {
        0: {}
    },
    message: "Refresh {0} inbox"
}}/>;
<Trans_ {.../*i18n*/ {
    id: "AmeQ8b",
    values: {
        0: {
            ...spread
        }
    },
    message: "Refresh {0} inbox"
}}/>;
