crates/lingui_macro/tests/snapshots/jsx__jsx_explicit_labels_with_as_statement.snap
---
source: crates/lingui_macro/tests/jsx.rs
---
import { Trans } from "@lingui/react/macro";
<Trans>Refresh {{foo} as unknown as string} inbox</Trans>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "rtxU8c",
    values: {
        foo: foo
    },
    message: "Refresh {foo} inbox"
}}/>;
