crates/lingui_macro/tests/snapshots/jsx__jsx_expressions_are_converted_to_positional_arguments.snap
---
source: crates/lingui_macro/tests/jsx.rs
---
import { Trans } from "@lingui/react/macro";
<Trans>
   Property {props.name},
   function {random()},
   array {array[index]},
   constant {42},
   object {new Date()},
   everything {props.messages[index].value()}
 </Trans>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
<Trans_ {.../*i18n*/ {
    id: "HjKDmx",
    values: {
        0: props.name,
        1: random(),
        2: array[index],
        3: 42,
        4: new Date(),
        5: props.messages[index].value()
    },
    message: "Property {0}, function {1}, array {2}, constant {3}, object {4}, everything {5}"
}}/>;
